FPVTL-1839: Amend tests 2