@@ -28,7 +28,6 @@ import uk.gov.hmcts.reform.prl.enums.YesNoNotApplicable;
 import uk.gov.hmcts.reform.prl.enums.caseflags.PartyRole;
 import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaCitizenServingRespondentsEnum;
 import uk.gov.hmcts.reform.prl.mapper.citizen.CaseDataMapper;
-import uk.gov.hmcts.reform.prl.models.CitizenUpdatedCaseData;
 import uk.gov.hmcts.reform.prl.models.Element;
 import uk.gov.hmcts.reform.prl.models.OrderDetails;
 import uk.gov.hmcts.reform.prl.models.OtherOrderDetails;
@@ -100,12 +99,12 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
-import static org.testng.AssertJUnit.assertNull;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.AWAITING_HEARING_DETAILS;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CITIZEN;
@@ -142,13 +141,9 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class CaseServiceTest {
 
-    public static final String authToken = "Bearer TestAuthToken";
-    public static final String s2sToken = "Bearer TestAuthToken";
-    public static final String caseId = "1234567891234567";
-    public static final String eventId = "1234567891234567";
-
-    public static final String accessCode = "123456";
-
+    public static final String AUTH_TOKEN = "Bearer TestAuthToken";
+    public static final String S2S_TOKEN = "Bearer TestAuthToken";
+    public static final String CASE_ID = "1234567891234567";
     public static final String CA_SOA_PERSONAL_APPLICANT = "CAN7_SOA_PERSONAL_APPLICANT,CAN9_SOA_PERSONAL_APPLICANT";
     public static final String DA_SOA_PERSONAL_APPLICANT = "DN2_SOA_PERSONAL_APPLICANT";
     public static final String CA_SOA_APPLICANT = "CAN4_SOA_PERSONAL_NON_PERSONAL_APPLICANT";
@@ -203,7 +198,6 @@ public class CaseServiceTest {
     private UserDetails userDetails;
     private Map<String, Object> caseDataMap;
     private PartyDetails partyDetails;
-    private CitizenUpdatedCaseData citizenUpdatedCaseData;
 
     private final UUID testUuid = UUID.fromString("00000000-0000-0000-0000-000000000000");
     private final UUID testUuid1 = UUID.fromString("06eef861-d2aa-4dbd-acc0-9244a1dfab17");
@@ -226,7 +220,7 @@ public class CaseServiceTest {
     private OrderDetails orderDetails;
 
     @BeforeEach
-    public void setup() {
+     void setup() {
         partyDetails = PartyDetails.builder()
             .firstName("")
             .lastName("test")
@@ -380,7 +374,7 @@ public class CaseServiceTest {
         map.put("fm5StatementsDocument",fm5QuarantineLegalDoc);
 
         //When
-        when(userService.getUserDetails(authToken)).thenReturn(userDetails);
+        when(userService.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(objectMapper.convertValue(quarantineLegalDoc, Map.class)).thenReturn(map);
         when(objectMapper.convertValue(fm5QuarantineLegalDoc, Map.class)).thenReturn(map);
 
@@ -410,7 +404,7 @@ public class CaseServiceTest {
             .id("00000000-0000-0000-0000-000000000000")
             .roles(List.of(Roles.CITIZEN.getValue())).build();
         //When
-        when(userService.getUserDetails(authToken)).thenReturn(userDetails);
+        when(userService.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
 
         ServedParties servedParties = ServedParties.builder()
             .partyId("00000000-0000-0000-0000-000000000000")
@@ -440,49 +434,41 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCase() {
+     void testGetCase() {
         assertNotNull(caseService.getCase("", ""));
     }
 
     @Test
-    public void testRetrieveCases() {
+     void testRetrieveCases() {
         assertNotNull(caseService.retrieveCases("", ""));
     }
 
     @Test
-    public void testRetrieveCasesTwoParams() {
+     void testRetrieveCasesTwoParams() {
         assertNotNull(caseService.retrieveCases("", ""));
     }
 
     @Test
-    public void shouldCreateCase() {
-        //Given
-        CaseData caseData = CaseData.builder()
-            .id(1234567891234567L)
-            .applicantCaseName("test")
-            .build();
-        userDetails = UserDetails
+     void shouldCreateCase() {
+
+         userDetails = UserDetails
             .builder()
             .roles(List.of(COURT_ADMIN_ROLE))
             .email("test@gmail.com")
             .build();
 
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
-        CaseDetails caseDetails = CaseDetails.builder().id(
-            1234567891234567L).data(stringObjectMap).build();
-
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
-        when(caseRepository.createCase(authToken, caseData)).thenReturn(caseDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
+        when(caseRepository.createCase(AUTH_TOKEN, caseData)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.createCase(caseData, authToken);
+        CaseDetails actualCaseDetails =  caseService.createCase(caseData, AUTH_TOKEN);
 
         //Then
         assertThat(actualCaseDetails).isEqualTo(caseDetails);
     }
 
     @Test
-    public void testGetPartyCaseFlags() {
+     void testGetPartyCaseFlags() {
         User user1 = User.builder().idamId("applicant-1").build();
         User user2 = User.builder().idamId("respondent-1").build();
         User user3 = User.builder().idamId("respondent-2").build();
@@ -520,7 +506,7 @@ public class CaseServiceTest {
             element(flagDetailRequestForHearing)
         )).build();
 
-        CaseData caseData = CaseData.builder()
+        CaseData caseData1 = CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
             .applicants(Collections.singletonList(element(applicant)))
@@ -528,16 +514,16 @@ public class CaseServiceTest {
             .allPartyFlags(AllPartyFlags.builder().caApplicant1ExternalFlags(applicant1PartyFlags).caRespondent1ExternalFlags(
                 respondent1PartyFlags).caRespondent2ExternalFlags(respondent2PartyFlags).build())
             .build();
-        Map<String, Object> stringObjectMap = caseData.toMap(new ObjectMapper());
+        Map<String, Object> stringObjectMap = caseData1.toMap(new ObjectMapper());
         CaseDetails caseDetailsCaseFlags = CaseDetails.builder()
             .id(1234567891234567L)
             .data(stringObjectMap)
             .build();
-        when(caseService.getCase(authToken, caseId)).thenReturn(caseDetailsCaseFlags);
-        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData);
+        when(caseService.getCase(AUTH_TOKEN, CASE_ID)).thenReturn(caseDetailsCaseFlags);
+        when(objectMapper.convertValue(stringObjectMap, CaseData.class)).thenReturn(caseData1);
 
         // Unhappy path - when the request is valid, but party details is invalid.
-        Flags invalidUserExternalFlag = caseService.getPartyCaseFlags(authToken, caseId, "applicant-2");
+        Flags invalidUserExternalFlag = caseService.getPartyCaseFlags(AUTH_TOKEN, CASE_ID, "applicant-2");
         assertNull(invalidUserExternalFlag);
 
         // Happy path 1 - when the request is valid and respondent party external flags is retrieved from the existing case data.
@@ -547,7 +533,7 @@ public class CaseServiceTest {
             1
         )).thenReturn("caRespondent2ExternalFlags");
         when(objectMapper.convertValue(Mockito.any(), Mockito.eq(Flags.class))).thenReturn(respondent2PartyFlags);
-        Flags respondentExternalFlag = caseService.getPartyCaseFlags(authToken, caseId, "respondent-2");
+        Flags respondentExternalFlag = caseService.getPartyCaseFlags(AUTH_TOKEN, CASE_ID, "respondent-2");
         assertNotNull(respondentExternalFlag);
         assertEquals("Respondent 2 FN Respondent 2 LN", respondentExternalFlag.getPartyName());
 
@@ -558,42 +544,36 @@ public class CaseServiceTest {
             0
         )).thenReturn("caApplicant1ExternalFlags");
         when(objectMapper.convertValue(Mockito.any(), Mockito.eq(Flags.class))).thenReturn(applicant1PartyFlags);
-        Flags applicantExternalFlag = caseService.getPartyCaseFlags(authToken, caseId, "applicant-1");
+        Flags applicantExternalFlag = caseService.getPartyCaseFlags(AUTH_TOKEN, CASE_ID, "applicant-1");
         assertNotNull(applicantExternalFlag);
         assertEquals(applicant1PartyFlags, applicantExternalFlag);
     }
 
     @Test
-    public void shouldUpdateCaseWithCaseName() throws IOException {
+     void shouldUpdateCaseWithCaseName() throws IOException {
 
         C100RebuildData c100RebuildData = C100RebuildData.builder()
             .c100RebuildApplicantDetails(TestUtil.readFileFrom("classpath:c100-rebuild/appl.json"))
             .c100RebuildRespondentDetails(TestUtil.readFileFrom("classpath:c100-rebuild/resp.json"))
             .build();
 
-        CaseData caseData = CaseData.builder()
+        CaseData caseData1 = CaseData.builder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
 
-        CaseDetails caseDetails = mock(CaseDetails.class);
-
-        CaseData updatedCaseData = caseData.toBuilder()
+        CaseData updatedCaseData = caseData1.toBuilder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .applicantCaseName("applicantLN1 V respLN1")
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -601,7 +581,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void shouldUpdateCaseWhenNonCitizenEventId() throws IOException {
+     void shouldUpdateCaseWhenNonCitizenEventId() throws IOException {
 
         C100RebuildData c100RebuildData = C100RebuildData.builder()
             .c100RebuildApplicantDetails(TestUtil.readFileFrom("classpath:c100-rebuild/appl.json"))
@@ -621,11 +601,11 @@ public class CaseServiceTest {
             .applicantCaseName("applicantLN1 V respLN1")
             .build();
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData,
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData,
                                        C100_REQUEST_SUPPORT)).thenReturn(caseDetails1);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -635,34 +615,27 @@ public class CaseServiceTest {
 
 
     @Test
-    public void shouldUpdateCaseWithCaseNameButNoApplicantOrRespondentDetails() throws IOException {
+     void shouldUpdateCaseWithCaseNameButNoApplicantOrRespondentDetails() throws IOException {
 
         C100RebuildData c100RebuildData = C100RebuildData.builder()
             .build();
 
-        CaseData caseData = CaseData.builder()
+        CaseData caseData1 = CaseData.builder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
-
-        CaseDetails caseDetails = mock(CaseDetails.class);
-
-        CaseData updatedCaseData = caseData.toBuilder()
+        CaseData updatedCaseData = caseData1.toBuilder()
             .id(1234567891234567L)
             .c100RebuildData(c100RebuildData)
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
 
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData1, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -670,28 +643,21 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void shouldUpdateCaseWithCaseNameButNoC100RebuildData() throws IOException {
+     void shouldUpdateCaseWithCaseNameButNoC100RebuildData() throws IOException {
 
-        CaseData caseData = CaseData.builder()
-            .id(1234567891234567L)
-            .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
 
-        CaseDetails caseDetails = mock(CaseDetails.class);
+
 
         CaseData updatedCaseData = caseData.toBuilder()
             .id(1234567891234567L)
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -699,30 +665,19 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void shouldUpdateCaseWithCaseNameButCaseNameExists() throws IOException {
-
-        CaseData caseData = CaseData.builder()
-            .id(1234567891234567L)
-            .applicantCaseName("test")
-            .build();
-        UserDetails userDetails = UserDetails
-            .builder()
-            .email("test@gmail.com")
-            .build();
-
-        CaseDetails caseDetails = mock(CaseDetails.class);
-
+     void shouldUpdateCaseWithCaseNameButCaseNameExists() throws IOException {
         CaseData updatedCaseData = caseData.toBuilder()
             .id(1234567891234567L)
             .applicantCaseName("test")
             .build();
 
-        when(idamClient.getUserDetails(authToken)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
+        when(idamClient.getUserDetails(AUTH_TOKEN)).thenReturn(userDetails);
         when(caseDataMapper.buildUpdatedCaseData(any())).thenReturn(updatedCaseData);
-        when(caseRepository.updateCase(authToken, caseId, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
+        when(caseRepository.updateCase(AUTH_TOKEN, CASE_ID, updatedCaseData, CITIZEN_CASE_UPDATE)).thenReturn(caseDetails);
 
         //When
-        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, authToken, caseId,
+        CaseDetails actualCaseDetails =  caseService.updateCase(caseData, AUTH_TOKEN, CASE_ID,
                                                                 CITIZEN_CASE_UPDATE.getValue());
 
         //Then
@@ -730,27 +685,29 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void getCaseWithHearing() {
-        when(coreCaseDataService.findCaseById(authToken, caseId)).thenReturn(caseDetails);
+     void getCaseWithHearing() {
+        when(coreCaseDataService.findCaseById(AUTH_TOKEN, CASE_ID)).thenReturn(caseDetails);
         when(objectMapper.convertValue(caseDetails, CaseData.class)).thenReturn(caseData);
-        when(hearingService.getHearings(authToken, "123")).thenReturn(Hearings.hearingsWith().build());
-        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(authToken, caseId, "yes");
+        when(hearingService.getHearings(AUTH_TOKEN, "123")).thenReturn(Hearings.hearingsWith().build());
+        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(AUTH_TOKEN,
+                                                                                                 CASE_ID, "yes");
         assertNotNull(caseDataWithHearingResponse.getHearings());
     }
 
     @Test
-    public void getCaseWithHearingHearingNotNeeded() {
-        when(coreCaseDataService.findCaseById(authToken, caseId)).thenReturn(caseDetails);
+     void getCaseWithHearingHearingNotNeeded() {
+        when(coreCaseDataService.findCaseById(AUTH_TOKEN, CASE_ID)).thenReturn(caseDetails);
         when(objectMapper.convertValue(caseDetails, CaseData.class)).thenReturn(caseData);
-        when(hearingService.getHearings(authToken, caseId)).thenReturn(Hearings.hearingsWith().build());
-        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(authToken, caseId, "dud");
+        when(hearingService.getHearings(AUTH_TOKEN, CASE_ID)).thenReturn(Hearings.hearingsWith().build());
+        CaseDataWithHearingResponse caseDataWithHearingResponse = caseService.getCaseWithHearing(AUTH_TOKEN,
+                                                                                                 CASE_ID, "dud");
         assertNull(caseDataWithHearingResponse.getHearings());
     }
 
     @Test
-    public void testGetCitizenDocuments() {
+     void testGetCitizenDocuments() {
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -760,13 +717,13 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenDocumentsWithFm5Reminders() {
+     void testGetCitizenDocumentsWithFm5Reminders() {
         CaseData citizenCaseData1 = citizenCaseData.toBuilder().fm5ReminderNotificationDetails(
                 FM5ReminderNotificationDetails.builder().fm5RemindersSent("YES").build())
             .documentManagementDetails(DocumentManagementDetails.builder().citizenQuarantineDocsList(List.of(
                 element(fm5QuarantineLegalDoc))).build()).build();
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -776,13 +733,13 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenDocumentsWithFm5RemindersSetToNO() {
+     void testGetCitizenDocumentsWithFm5RemindersSetToNO() {
         CaseData citizenCaseData1 = citizenCaseData.toBuilder().fm5ReminderNotificationDetails(
                 FM5ReminderNotificationDetails.builder().fm5RemindersSent("NO").build())
             .documentManagementDetails(DocumentManagementDetails.builder().citizenQuarantineDocsList(List.of(
                 element(fm5QuarantineLegalDoc))).build()).build();
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -792,7 +749,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenDocumentsWithFm5RemindersWhenPartyIdIsDiffer() {
+     void testGetCitizenDocumentsWithFm5RemindersWhenPartyIdIsDiffer() {
 
         QuarantineLegalDoc quarantineLegalDoc1 = QuarantineLegalDoc.builder()
             .fm5StatementsDocument(Document.builder().build())
@@ -809,7 +766,7 @@ public class CaseServiceTest {
             .documentManagementDetails(DocumentManagementDetails.builder().citizenQuarantineDocsList(List.of(
                 element(quarantineLegalDoc1))).build()).build();
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -820,12 +777,12 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testEmptyCitizenDocumentsWhenNoDocs() {
+     void testEmptyCitizenDocumentsWhenNoDocs() {
         //Given
         citizenCaseData = CaseData.builder().state(State.DECISION_OUTCOME).build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -835,7 +792,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testFilterNonAccessibleCitizenDocuments() {
+     void testFilterNonAccessibleCitizenDocuments() {
         //Given
         QuarantineLegalDoc otherPartyDoc = QuarantineLegalDoc.builder()
             .uploaderRole(CITIZEN)
@@ -852,7 +809,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, citizenCaseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, citizenCaseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -860,7 +817,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenApplicantOrdersC100() {
+     void testGetCitizenApplicantOrdersC100() {
         //Given
         caseData = caseData.toBuilder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -870,11 +827,11 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenOrders()));
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
@@ -884,7 +841,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenRespondentOrdersC100() {
+     void testGetCitizenRespondentOrdersC100() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -904,7 +861,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertNotNull(citizenDocumentsManagement.getCitizenApplicationPacks());
@@ -917,9 +874,9 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenApplicantOrdersFL401() {
+     void testGetCitizenApplicantOrdersFL401() {
         //Given
-        finalServedApplicationDetailsList.get(0).getValue().getBulkPrintDetails().get(0).getValue().setPartyIds(testUuid.toString());
+        finalServedApplicationDetailsList.getFirst().getValue().getBulkPrintDetails().getFirst().getValue().setPartyIds(testUuid.toString());
         caseData = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
             .state(State.DECISION_OUTCOME)
@@ -929,7 +886,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -942,7 +899,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testGetCitizenRespondentOrdersFL401() {
+     void testGetCitizenRespondentOrdersFL401() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -960,7 +917,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -973,7 +930,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedC100() {
+     void testCitizenOrdersSosCompletedC100() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -991,7 +948,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertNotNull(citizenDocumentsManagement.getCitizenApplicationPacks());
@@ -999,11 +956,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(CA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(CA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401() {
+     void testCitizenOrdersSosCompletedFL401() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -1039,7 +996,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1047,11 +1004,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersWithSolicitorUploadedApplicationFL401() {
+     void testCitizenOrdersWithSolicitorUploadedApplicationFL401() {
         //Given
         orderDetails = orderDetails.toBuilder()
             .serveOrderDetails(orderDetails.getServeOrderDetails().toBuilder()
@@ -1088,7 +1045,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1097,7 +1054,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401ForOccupationOrder() {
+     void testCitizenOrdersSosCompletedFL401ForOccupationOrder() {
 
         //Given
         OrderDetails orderDetails1 = orderDetails.toBuilder()
@@ -1145,7 +1102,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1153,11 +1110,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401CustomFields1() {
+     void testCitizenOrdersSosCompletedFL401CustomFields1() {
 
         //Given
         OrderDetails orderDetails1 = orderDetails.toBuilder()
@@ -1201,7 +1158,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1209,11 +1166,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenOrdersSosCompletedFL401ForOccupationOrderWithNoPowerOfArrest() {
+     void testCitizenOrdersSosCompletedFL401ForOccupationOrderWithNoPowerOfArrest() {
         //Given
         OrderDetails orderDetails1 = orderDetails.toBuilder()
             .dateCreated(LocalDateTime.now())
@@ -1264,7 +1221,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1272,12 +1229,12 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(DA_ORDER_SOS_CA_CB_APPLICANT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
 
     @Test
-    public void testCitizenApplicantSoaPersonalServiceC100() {
+     void testCitizenApplicantSoaPersonalServiceC100() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(UNREPRESENTED_APPLICANT)
@@ -1295,12 +1252,12 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getRespondentSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getRespondentSoaPack()));
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
         assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
@@ -1309,7 +1266,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSoaPersonalServiceFL401() {
+     void testCitizenApplicantSoaPersonalServiceFL401() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(UNREPRESENTED_APPLICANT)
@@ -1328,15 +1285,15 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenOrders()));
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getRespondentSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getRespondentSoaPack()));
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
         assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
@@ -1344,7 +1301,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedC100() {
+     void testCitizenApplicantSosCompletedC100() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(PERSONAL_SERVICE_SERVED_BY_CA)
@@ -1365,11 +1322,11 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
         //Assert
         assertNotNull(citizenDocumentsManagement);
         assertNotNull(citizenDocumentsManagement.getCitizenApplicationPacks());
-        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().get(0).getApplicantSoaPack()));
+        assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenApplicationPacks().getFirst().getApplicantSoaPack()));
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
         assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
@@ -1377,7 +1334,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedFL401() {
+     void testCitizenApplicantSosCompletedFL401() {
         //Given
         servedApplicationDetails = servedApplicationDetails.toBuilder()
             .whoIsResponsible(PERSONAL_SERVICE_SERVED_BY_CA)
@@ -1398,7 +1355,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1411,7 +1368,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnly() {
+     void testCitizenApplicantSosCompletedPostOnly() {
         //Given
         caseData = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1427,7 +1384,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1440,7 +1397,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnlyWhenCaseStatePrepareForHearingConductHearing() {
+     void testCitizenApplicantSosCompletedPostOnlyWhenCaseStatePrepareForHearingConductHearing() {
         OrderDetails orderDetails1 = orderDetails.toBuilder()
             .dateCreated(LocalDateTime.now())
             .fl404CustomFields(FL404.builder().fl404bIsPowerOfArrest1(NO).fl404bIsPowerOfArrest2(YES)
@@ -1470,7 +1427,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1482,7 +1439,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnlyWhenBothPartiesIdamIdIsNull() {
+     void testCitizenApplicantSosCompletedPostOnlyWhenBothPartiesIdamIdIsNull() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1498,7 +1455,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1508,7 +1465,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenApplicantSosCompletedPostOnlyWhenCaseStateIsJudicialReview() {
+     void testCitizenApplicantSosCompletedPostOnlyWhenCaseStateIsJudicialReview() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1525,7 +1482,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1535,7 +1492,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testRespondentCitizenDocOrders() {
+     void testRespondentCitizenDocOrders() {
         List<Element<FL401Proceedings>> fl401Proceedings = new ArrayList<>();
         fl401Proceedings.add(ElementUtils.element(FL401Proceedings.builder().uploadRelevantOrder(Document.builder().build()).build()));
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
@@ -1559,7 +1516,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1568,7 +1525,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenDocOrdersWhenRespondentsFl401IdamIdIsNull() {
+     void testCitizenDocOrdersWhenRespondentsFl401IdamIdIsNull() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -1584,7 +1541,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1595,7 +1552,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testCitizenDocOrdersWhenC100IsCaseType() {
+     void testCitizenDocOrdersWhenC100IsCaseType() {
         //Given
         CaseData caseData1 = caseData.toBuilder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -1611,7 +1568,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1619,12 +1576,12 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
 
     @Test
-    public void testCitizenDocOrdersWhenRespondentPartyIdamIdIsNull() {
+     void testCitizenDocOrdersWhenRespondentPartyIdamIdIsNull() {
         List<Element<PartyDetails>> partyDetailsList = new ArrayList<>();
         partyDetailsList.add(Element.<PartyDetails>builder()
                                  .value(PartyDetails.builder()
@@ -1648,7 +1605,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1656,11 +1613,11 @@ public class CaseServiceTest {
         assertEquals(1, citizenDocumentsManagement.getCitizenOrders().size());
         //Assert notifications
         assertTrue(CollectionUtils.isNotEmpty(citizenDocumentsManagement.getCitizenNotifications()));
-        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().get(0).getId());
+        assertEquals(ORDER_APPLICANT_RESPONDENT, citizenDocumentsManagement.getCitizenNotifications().getFirst().getId());
     }
 
     @Test
-    public void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNull() {
+     void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNull() {
         List<Element<PartyDetails>> partyDetailsList = new ArrayList<>();
         partyDetailsList.add(Element.<PartyDetails>builder()
                                  .value(PartyDetails.builder()
@@ -1684,7 +1641,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1694,7 +1651,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNotSameAsUser() {
+     void testCitizenDocOrdersWhenApplicantAndRespondentPartyIdamIdIsNotSameAsUser() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1728,7 +1685,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1738,7 +1695,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testCitizenDocOrdersWhenApplicationServedBy() {
+     void testCitizenDocOrdersWhenApplicationServedBy() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1794,7 +1751,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1805,7 +1762,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testCitizenDocOrdersWhenApplicationServedByWhenPartyIdsDoNotMatch() {
+     void testCitizenDocOrdersWhenApplicationServedByWhenPartyIdsDoNotMatch() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1861,7 +1818,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1872,7 +1829,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testCitizenDocOrdersWhenApplicationServedByNullPointerExceptionScenario() {
+     void testCitizenDocOrdersWhenApplicationServedByNullPointerExceptionScenario() {
 
         List<Element<RespondentProceedingDetails>> respondentProceedingDetails = new ArrayList<>();
         respondentProceedingDetails.add(ElementUtils.element(RespondentProceedingDetails.builder().uploadRelevantOrder(
@@ -1938,7 +1895,7 @@ public class CaseServiceTest {
             .build();
 
         //Action
-        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(authToken, caseData1);
+        CitizenDocumentsManagement citizenDocumentsManagement = caseService.getAllCitizenDocumentsOrders(AUTH_TOKEN, caseData1);
 
         //Assert
         assertNotNull(citizenDocumentsManagement);
@@ -1949,7 +1906,7 @@ public class CaseServiceTest {
 
 
     @Test
-    public void testUpdateCitizenRaFlagsWithNullPartyDetailsMeta() {
+     void testUpdateCitizenRaFlagsWithNullPartyDetailsMeta() {
         //Given
         CitizenPartyFlagsRequest citizenPartyFlagsRequest = CitizenPartyFlagsRequest.builder()
             .partyExternalFlags(FlagsRequest.builder().build())
@@ -1963,7 +1920,7 @@ public class CaseServiceTest {
         when(coreCaseDataService.eventRequest(Mockito.any(), Mockito.anyString())).thenReturn(EventRequestData.builder()
                                                                                                   .build());
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -1971,13 +1928,13 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testUpdateCitizenRaFlagsBadRequest() {
+     void testUpdateCitizenRaFlagsBadRequest() {
         //Given
         CitizenPartyFlagsRequest citizenPartyFlagsRequest = CitizenPartyFlagsRequest.builder()
             .partyExternalFlags(FlagsRequest.builder().build())
             .build();
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -1985,7 +1942,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testUpdateCitizenRaFlagsWithPartyDetailsMetaEmptyExtCaseFlag() {
+     void testUpdateCitizenRaFlagsWithPartyDetailsMetaEmptyExtCaseFlag() {
         //Given
         caseData = caseData.toBuilder().caseTypeOfApplication(C100_CASE_TYPE).build();
         CitizenPartyFlagsRequest citizenPartyFlagsRequest = CitizenPartyFlagsRequest.builder()
@@ -2002,7 +1959,7 @@ public class CaseServiceTest {
         when(coreCaseDataService.eventRequest(Mockito.any(), Mockito.anyString())).thenReturn(EventRequestData.builder()
                                                                                                   .build());
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -2010,7 +1967,7 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testUpdateCitizenRaFlagsWithPartyDetailsMetaWithExtCaseFlag() {
+     void testUpdateCitizenRaFlagsWithPartyDetailsMetaWithExtCaseFlag() {
         //Given
         caseData = caseData.toBuilder().caseTypeOfApplication(C100_CASE_TYPE).build();
         when(idamClient.getUserInfo(Mockito.anyString())).thenReturn(UserInfo.builder().uid("test").build());
@@ -2033,7 +1990,7 @@ public class CaseServiceTest {
             .partyIdamId(TEST_UUID)
             .build();
         //Action
-        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", authToken,
+        ResponseEntity<Object> response = caseService.updateCitizenRAflags("test", "citizenAwpCreate", AUTH_TOKEN,
                                                                            citizenPartyFlagsRequest);
 
         //Assert
@@ -2041,9 +1998,9 @@ public class CaseServiceTest {
     }
 
     @Test
-    public void testFetchIdamRoles() {
+     void testFetchIdamRoles() {
         when(roleAssignmentService.fetchIdamAmRoles(Mockito.anyString(), Mockito.anyString())).thenReturn(Map.of("test", "role"));
-        Map<String, String> roles = caseService.fetchIdamAmRoles(authToken, "test");
+        Map<String, String> roles = caseService.fetchIdamAmRoles(AUTH_TOKEN, "test");
         assertEquals("role", roles.get("test"));
     }
 
